linkedin profile added

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
         
         <h3 class="font-heading text-xl font-bold text-primary mt-12 mb-5">Connect With Us</h3>
         <div class="flex space-x-4">
-            <a href="#" class="h-12 w-12 rounded-lg bg-primary flex items-center justify-center text-white hover:bg-accent hover:text-primary transition-all duration-300">
+            <a href="https://www.linkedin.com/company/trooplo" target="_blank" rel="noopener noreferrer" class="h-12 w-12 rounded-lg bg-primary flex items-center justify-center text-white hover:bg-accent hover:text-primary transition-all duration-300">
                 <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="#" class="h-12 w-12 rounded-lg bg-primary flex items-center justify-center text-white hover:bg-accent hover:text-primary transition-all duration-300">
